--- a/public/select-opponent.html
+++ b/public/select-opponent.html
@@ -39,15 +39,19 @@
     <span id="clearSearch" class="clear-search"></span>
   </div>
 
-  <!-- Sort header -->
-  <div class="sort-header-user">
-    <div class="sort-item" data-sort="username">USERNAME</div>
-    <div class="sort-item active" data-sort="balance">
-      <img src="icons/sh.png" alt="PPC" class="sort-ppc-icon">
-      SWISSHEARTS
-      <div class="sort-triangle desc"></div>
-    </div>
+<!-- Sort header -->
+<div class="sort-header-user">
+  <div class="sort-item" data-sort="username">
+    USERNAME
+    <div class="sort-triangle"></div> 
   </div>
+
+  <div class="sort-item active" data-sort="balance">
+    <img src="icons/sh.png" alt="PPC" class="sort-ppc-icon">
+    SWISSHEARTS
+    <div class="sort-triangle desc"></div>
+  </div>
+</div>
 
   <!-- Lista utenti -->
   <div id="opponentList" class="opponent-list">
