--- a/public/league-details.html
+++ b/public/league-details.html
@@ -24,7 +24,7 @@
     </div>
     <div class="header-stats">
         <div class="stats-row">
-          <div class="label_m_small">Invited</div>
+          <div class="label_m_small">Members</div>
           <div class="label_m_small">Rejected</div>
           <div class="label_m_small">Confirmed</div>
         </div>
@@ -41,10 +41,10 @@
   <div id="leagueHeader" class="league-header"></div>
 
   <!-- 2) NOME COMPLETO DEL CONTEST -->
-  <div id="contestNameFull" class="contest-name-full" style="padding:16px; font-size:1.2rem; font-weight:bold;"></div>
+  <div id="contestNameFull" class="contest_leaguename" ></div>
 
   <!-- 3) LISTA FANTASY TEAMS -->
-  <div id="teamsContainer" class="teams-container"></div>
+  <div id="teamsContainer" class="team-container-league"></div>
 
   <!-- SCRIPT PRINCIPALE (index.js) -->
   <script type="module" src="/js/user/leagueDetails/index.js"></script>
