--- a/public/league-recap.html
+++ b/public/league-recap.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <div id="teamsContainer" class="teams-container"></div>
+  <div id="teamsContainer" class="team-container-league"></div>
 
   <footer class="footer-nav" style="justify-content:flex-end; margin-top:48px;">
     <button class="footer_button footer_button_blue" id="DiscardBtn">DISCARD</button>
