--- a/public/modals/rules.html
+++ b/public/modals/rules.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Regole - FANTAFCWC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Regole - Fanta FIFA Club World Cup</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -21,119 +21,139 @@
       color: #F1BE48;
       margin-top: 20px;
     }
-    p {
+    p, ul, table {
       line-height: 1.6;
     }
     .section {
       margin-bottom: 30px;
     }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    table th, table td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: left;
+    }
+    table th {
+      background-color: #eee;
+    }
   </style>
 </head>
 <body>
-  <h1>Regole di FANTAFCWC</h1>
+  <h1>Regole di Fanta FIFA Club World Cup</h1>
 
   <div class="section">
-    <h2>Pronti a scatenare la vostra playlist?</h2>
+    <h2>Pronti a schierare la vostra formazione?</h2>
     <ul>
-      <li><strong>Registrazione:</strong> Parti con <strong>500 SWISSHEARTS</strong>.</li>
-      <li><strong>Sfide:</strong> Usa fino a <strong>10 SWISSHEARTS</strong> per creare la tua squadra di artisti.</li>
-      <li><strong>Montepremi:</strong> Chi totalizza più punti vince tutto. Parità? La gloria si condivide!</li>
-      <li><strong>Punteggi:</strong>
-        <BR>
-          SemiFinale: Se l'artista si qualifica 2.5 punti, se no zero<br>
-          Finale: Ogni artista ti dà punti in base ai voti ottenuti (voti divisi per 100 e normalizzati a step di 0.5).<br>
-      <li><strong>Classifica:</strong> Più SWISSHEARTS vinci, più sali sul podio della musica!</li>
+      <li><strong>Registrazione:</strong> Parti con <strong>500 CLUBBY</strong>.</li>
+      <li><strong>Tipi di Sfida:</strong>
+        <ul>
+          <li><strong>Head 2 Head:</strong> testa a testa: chi fa più punti se li prende tutti.</li>
+          <li><strong>Private League:</strong> fino a 10 persone; montepremi 60% al 1°, 30% al 2°, 10% al 3°.</li>
+        </ul>
+      </li>
+      <li><strong>CREAZIONE SQUADRA:</strong> Usa i tuoi CLUBBY per “acquistare” giocatori: ogni giocatore ha un costo variabile in base al valore, alla partita e alla squadra. Non ci sono limiti di numero, l’unico tetto è spendere fino a 10 CLUBBY in totale.</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>1. Introduzione</h2>
-    <p>Benvenuto su FANTAFCWC! Questo è il tuo regolamento ufficiale. Leggilo con attenzione e poi corri a fare la tua squadra: il palco ti aspetta!</p>
+    <p>Benvenuto su <strong>Fanta FIFA Club World Cup</strong>! Qui si gioca sul serio: metti insieme la tua formazione e fatti valere in campo virtuale.</p>
   </div>
 
   <div class="section">
-    <h2>2. Registrazione e SWISSHEARTS</h2>
-    <p>Ogni utente parte con 500 SWISSHEARTS. Ogni volta che crei una sfida, puoi usarne fino a 10 per selezionare i tuoi artisti preferiti.</p>
+    <h2>2. Registrazione e CLUBBY</h2>
+    <p>Ogni utente parte con 500 CLUBBY. Quando costruisci la squadra, spendi CLUBBY per prendere i giocatori—fino a 10 CLUBBY totali.</p>
   </div>
 
   <div class="section">
     <h2>3. Creazione di una Sfida</h2>
-    <p>Sfida altri utenti creando la tua squadra di artisti. Bastano tre step:</p>
+    <p>Tre passaggi e sei pronto:</p>
     <ul>
-      <li>1. Seleziona gli artisti in gara.</li>
-      <li>2. Scegli se vuoi moltiplicare i punti (x5 o x10).</li>
-      <li>3. Conferma la sfida: se hai abbastanza SWISSHEARTS, sei dentro!</li>
+      <li>1. Scegli Head 2 Head o Private League.</li>
+      <li>2. Crea la tua rosa: metti i giocatori che vuoi, spendendo fino a 10 CLUBBY.</li>
+      <li>3. Dai l’ok e invita gli amici: loro devono accettare la sfida per giocare.</li>
     </ul>
-    <p>Lo stato sarà "Pending" per te e "Invited" per il tuo avversario.</p>
+    <p>Dopo aver invitato, i tuoi amici troveranno la sfida nella sezione “Inviti” e dovranno confermare per partire.</p>
   </div>
 
   <div class="section">
     <h2>4. Composizione della Squadra</h2>
-    <p>Ogni squadra può includere:</p>
-    <ul>
-      <li>Artisti singoli in gara.</li>
-     </ul>
-    <p>Ogni scelta ha un costo in SWISSHEARTS, proporzionale alla probabilità di successo.</p>
+    <p>Schiera i giocatori che preferisci reali della FIFA Club World Cup: nessun vincolo di reparto o numero minimo. L’unico limite è il budget di 10 CLUBBY.</p>
   </div>
 
   <div class="section">
     <h2>5. Stati della Sfida</h2>
     <ul>
-      <li><strong>Ready:</strong> Entrambi hanno scelto i propri artisti. In attesa dello show.</li>
-      <li><strong>Live:</strong> L’evento è in corso, i voti stanno arrivando!</li>
-      <li><strong>Completed:</strong> L’evento è finito, i punti sono stati assegnati. Controlla il tuo bottino!</li>
+      <li><strong>Ready:</strong> Squadre confermate, si aspetta l’inizio delle partite.</li>
+      <li><strong>Live:</strong> I match vanno in diretta, i punti scorrono in tempo reale.</li>
+      <li><strong>Completed:</strong> Le partite sono finite, i punti assegnati: ritira i tuoi CLUBBY virtuali!</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>6. Punteggio</h2>
-    <p>SemiFinale: Se l'artista si qualifica 2.5 punti, se no zero</p>
-    <h3>Finale:</h3>
-    <p>I punti vengono assegnati in base ai voti reali ottenuti dagli artisti, secondo questa formula:</p>
-    <ul>
-      <li><strong>Voti / 100</strong>, arrotondati a step di 0.5.</li>
-    </ul>
-    <p>Esempi:</p>
-    <ul>
-      <li>456 voti → <strong>4.5 punti</strong></li>
-      <li>445 voti → <strong>4.0 punti</strong></li>
-      <li>308 voti → <strong>3.0 punti</strong></li>
-    </ul>
-    <p>Il punteggio è semplice, giusto e... altamente musicale!</p>
+    <p>I punti si basano sugli eventi reali di ogni giocatore e della squadra:</p>
+    <table>
+      <tr>
+        <th>Categoria</th>
+        <th>Evento</th>
+        <th>Punti</th>
+      </tr>
+      <!-- Giocatori -->
+      <tr><td rowspan="10"><strong>Giocatori</strong></td><td>In campo da titolare</td><td>+2</td></tr>
+      <tr><td>Entrato dalla panchina</td><td>+1</td></tr>
+      <tr><td>Rigore parato</td><td>+3</td></tr>
+      <tr><td>Rigore sbagliato</td><td>−3</td></tr>
+      <tr><td>Cartellino giallo</td><td>−0.5</td></tr>
+      <tr><td>Cartellino rosso</td><td>−1</td></tr>
+      <tr><td>Portiere: porta inviolata</td><td>+1</td></tr>
+      <tr><td>Autogol</td><td>−2</td></tr>
+      <tr><td>Gol segnato</td><td>+3</td></tr>
+      <tr><td>Gol subito (solo per il portiere)</td><td>−1</td></tr>
+      <!-- Squadra -->
+      <tr><td rowspan="4"><strong>Squadra</strong></td><td>Gol subiti</td><td>−0.5</td></tr>
+      <tr><td>Gol segnati</td><td>+0.5</td></tr>
+      <tr><td>Vittoria</td><td>+1</td></tr>
+      <tr><td>Porta inviolata</td><td>+0.5</td></tr>
+    </table>
   </div>
 
   <div class="section">
     <h2>7. Vittoria e Montepremi</h2>
-    <p>Chi totalizza più punti vince tutto il montepremi in SWISSHEARTS messo in gioco nella sfida. In caso di parità, il bottino viene diviso tra i giocatori.</p>
-  </div>
-
-  <div class="section">
-    <h2>8. Artisti in Classifica</h2>
-    <p>Le performance degli artisti e le relative quotazioni possono cambiare nel tempo. Tieni d’occhio le nuove hit e aggiorna la tua squadra!</p>
-  </div>
-
-  <div class="section">
-    <h2>9. Classifica Globale</h2>
-    <p>Ogni SWISSHEARTS guadagnato ti fa salire nella classifica globale. Mostra al mondo chi ha l’orecchio più allenato. Condividi i tuoi risultati e scala la vetta!</p>
-  </div>
-
-  <div class="section">
-    <h2>10. Esempio di Assegnazione Punti</h2>
-
-    <h3>Esempio: Lucio Corsi ottiene 275 voti</h3>
+    <p>In Head 2 Head, chi fa più punti si prende tutti i CLUBBY messi in gioco. In Private League:</p>
     <ul>
-      <li><strong>1. Chi aveva scelto Lucio:</strong> riceve <strong>2.5 punti</strong> (275 ÷ 100 = 2.75 → 2.5 punti normalizzati).</li>
-   </ul>
-
-    <p><em>Nota: i punteggi si basano esclusivamente sulle votazioni ufficiali Eurovision.</em></p>
+      <li>1° → 60% del montepremi</li>
+      <li>2° → 30% del montepremi</li>
+      <li>3° → 10% del montepremi</li>
+    </ul>
   </div>
 
   <div class="section">
-    <p><strong>FANTAFCWC – Tutti i diritti riservati</strong></p>
-    <p>Per dubbi, suggerimenti o collaborazioni scrivici a <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
-    <p><em>Che vinca la musica, sempre 🎤</em></p>
+    <h2>8. Classifica Globale</h2>
+    <p>Accumula CLUBBY e scala la classifica mondiale: dimostra di essere il miglior allenatore di Fanta FIFA Club World Cup!</p>
+  </div>
+
+  <div class="section">
+    <h2>9. Esempio di Punteggio</h2>
+    <h3>Jude Bellingham (Real Madrid) + risultato Real Madrid 2-1</h3>
+    <ul>
+      <li>Titolare: +2</li>
+      <li>Gol segnato da Bellingham: +3</li>
+      <li>Vittoria del Real Madrid: +1</li>
+      <li>Gol segnati dalla squadra (2 × 0.5): +1</li>
+      <li>Gol subiti dalla squadra (1 × –0.5): –0.5</li>
+    </ul>
+    <p><strong>Totale:</strong> 2 + 3 + 1 + 1 − 0.5 = <em>6.5 punti</em></p>
+  </div>
+
+  <div class="section">
+    <p><strong>FANTA FIFA CLUB WORLD CUP – Tutti i diritti riservati</strong></p>
+    <p>Domande o feedback? Scrivici a <a href="mailto:FANTAFWCWC@gmail.com">FANTAFWCWC@gmail.com</a></p>
+    <p><em>Metti alla prova le tue doti di manager e vinci alla grande! ⚽️🏆</em></p>
   </div>
 </body>
-
-  
 </html>
