--- a/public/modals/privacy.html
+++ b/public/modals/privacy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy - FANTAFCWC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Privacy - Fanta FIFA Club World Cup</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -21,7 +21,7 @@
       color: #F1BE48;
       margin-top: 20px;
     }
-    p {
+    p, ul {
       line-height: 1.6;
     }
     .section {
@@ -38,80 +38,80 @@
 
   <div class="section">
     <h2>1. Introduzione</h2>
-    <p>Questa informativa descrive come FANTAFCWC raccoglie, utilizza e protegge i tuoi dati personali quando usi la nostra piattaforma per giocare al fantasy game ispirato all’Eurovision Song Contest.</p>
+    <p>Questa informativa descrive come <strong>Fanta FIFA Club World Cup</strong> raccoglie, utilizza e protegge i tuoi dati personali quando usi la nostra piattaforma per il fantasy calcistico basato sul FIFA Club World Cup.</p>
   </div>
 
   <div class="section">
     <h2>2. Dati Raccolti</h2>
-    <p>Raccogliamo diversi tipi di dati, tra cui:</p>
+    <p>Raccogliamo le seguenti categorie di informazioni:</p>
     <ul>
-      <li>Dati di registrazione (nome, email, password)</li>
-      <li>Dati di profilo (username, avatar)</li>
-      <li>Interazioni con l'app (squadre create, sfide lanciate)</li>
-      <li>Informazioni tecniche (tipo di dispositivo, sistema operativo)</li>
+      <li><strong>Dati di registrazione:</strong> nome, email, password</li>
+      <li><strong>Dati di profilo:</strong> username, avatar</li>
+      <li><strong>Attività di gioco:</strong> squadre create, sfide lanciate, scelte dei giocatori</li>
+      <li><strong>Informazioni tecniche:</strong> tipo di dispositivo, sistema operativo, indirizzo IP</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>3. Come utilizziamo i tuoi dati</h2>
     <ul>
-      <li>Per offrire e migliorare l’esperienza di gioco</li>
-      <li>Per personalizzare l’interfaccia e le interazioni</li>
-      <li>Per contattarti in merito al tuo account o al servizio</li>
-      <li>Per garantire la sicurezza e il corretto funzionamento della piattaforma</li>
+      <li>Migliorare e personalizzare l’esperienza di gioco</li>
+      <li>Gestire il tuo account e le sfide</li>
+      <li>Inviare notifiche relative a eventi, risultati e aggiornamenti</li>
+      <li>Assicurare la sicurezza e l'integrità della piattaforma</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>4. Condivisione dei Dati</h2>
-    <p>I tuoi dati non verranno mai venduti. Possiamo condividerli solo con:</p>
+    <p>I tuoi dati non vengono mai venduti. Possiamo condividerli solo con:</p>
     <ul>
       <li>Fornitori di servizi tecnici che supportano la piattaforma</li>
-      <li>Partner, ma solo con il tuo consenso esplicito</li>
+      <li>Partner, esclusivamente con il tuo consenso esplicito</li>
       <li>Autorità competenti, se richiesto dalla legge</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>5. Cookie e Tecnologie Simili</h2>
-    <p>Utilizziamo cookie e strumenti simili per migliorare l’usabilità, analizzare i dati e personalizzare contenuti e funzionalità.</p>
+    <p>Utilizziamo cookie e strumenti simili per ottimizzare l’usabilità, analizzare i dati di traffico e personalizzare contenuti e funzionalità.</p>
   </div>
 
   <div class="section">
     <h2>6. I tuoi diritti</h2>
-    <p>Hai diritto a:</p>
+    <p>Hai il diritto di:</p>
     <ul>
-      <li>Accedere ai tuoi dati</li>
-      <li>Chiedere correzioni</li>
-      <li>Richiedere la cancellazione del tuo account</li>
-      <li>Limitare o opporti al trattamento</li>
+      <li>Accedere ai tuoi dati personali</li>
+      <li>Richiedere la correzione di dati inesatti</li>
+      <li>Cancellare il tuo account e i dati associati</li>
+      <li>Limitare o opporti al trattamento dei dati</li>
       <li>Ricevere una copia dei tuoi dati (portabilità)</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>7. Sicurezza dei Dati</h2>
-    <p>Adottiamo misure di sicurezza tecniche e organizzative per proteggere i tuoi dati da accessi non autorizzati, perdite o modifiche non intenzionali.</p>
+    <p>Adottiamo misure tecniche e organizzative per proteggere i tuoi dati da accessi non autorizzati, perdite o modifiche accidentali.</p>
   </div>
 
   <div class="section">
     <h2>8. Modifiche all’informativa</h2>
-    <p>Questa informativa può essere aggiornata. Ti informeremo tramite app o sito ogni volta che apportiamo modifiche rilevanti.</p>
+    <p>Potremmo aggiornare questa informativa di tanto in tanto. Ti avviseremo tramite la piattaforma o via email per ogni modifica significativa.</p>
   </div>
 
   <div class="section">
     <h2>9. Contatti</h2>
-    <p>Per qualsiasi richiesta o chiarimento sulla gestione dei tuoi dati, puoi contattare il nostro team all’indirizzo: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
+    <p>Per domande o richieste relative ai tuoi dati personali, scrivi a <a href="mailto:FANTAFWCWC@gmail.com">FANTAFWCWC@gmail.com</a>.</p>
   </div>
 
   <div class="section">
-    <h2>10. Servizi di Terze Parti (Firebase)</h2>
-    <p>Usiamo Firebase di Google per l’autenticazione e l’hosting. I tuoi dati di accesso sono conservati in modo sicuro da Google. Puoi leggere l’informativa completa di Google qui: <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a></p>
+    <h2>10. Servizi di Terze Parti</h2>
+    <p>Utilizziamo <strong>Firebase di Google</strong> per autenticazione e hosting. I tuoi dati di accesso sono gestiti in conformità con l’informativa privacy di Google, disponibile qui: <a href="https://policies.google.com/privacy" target="_blank">policies.google.com/privacy</a>.</p>
   </div>
 
   <div class="section">
     <h2>11. Durata del Trattamento</h2>
-    <p>I tuoi dati restano attivi finché usi la piattaforma. Se elimini l’account o il servizio viene interrotto, i dati saranno cancellati entro 30 giorni, salvo obblighi legali diversi.</p>
+    <p>I tuoi dati resteranno attivi finché utilizzi la piattaforma. In caso di cancellazione dell’account, li elimineremo entro 30 giorni, salvo obblighi legali diversi.</p>
   </div>
 
   <div class="section">
@@ -119,16 +119,14 @@
     <p>Trattiamo i tuoi dati solo sulla base di:</p>
     <ul>
       <li>Consenso informato</li>
-      <li>Esecuzione dei servizi offerti</li>
-      <li>Obblighi legali da rispettare</li>
+      <li>Esecuzione del contratto di gioco</li>
+      <li>Obblighi di legge</li>
     </ul>
   </div>
 
   <div class="section">
-    <p><strong>FANTAFCWC – Tutti i diritti riservati</strong></p>
-    <p>Hai un’idea per un fantasy musicale? Scrivici a <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
-    <p><em>Privacy, musica e rispetto. Sempre. 🎶</em></p>
+    <p><strong>Fanta FIFA Club World Cup – Tutti i diritti riservati</strong></p>
+    <p><em>Il fantasy calcistico che mette alla prova la tua abilità di manager!</em></p>
   </div>
 </body>
-
 </html>
