--- a/public/modals/terms.html
+++ b/public/modals/terms.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Termini e Condizioni - FANTAFCWC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Termini e Condizioni - Fanta FIFA Club World Cup</title>
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
@@ -13,7 +13,6 @@
       background-color: #f5f5f5;
     }
     h1 {
-
       color: #0A0034;
       border-bottom: 2px solid #F1BE48;
       padding-bottom: 10px;
@@ -22,7 +21,7 @@
       color: #F1BE48;
       margin-top: 20px;
     }
-    p {
+    p, ul {
       line-height: 1.6;
     }
     .section {
@@ -39,71 +38,68 @@
 
   <div class="section">
     <h2>1. Accettazione dei Termini</h2>
-    <p>Utilizzando FANTAFCWC, accetti i presenti Termini e Condizioni. Se non sei d’accordo con questi termini, ti invitiamo a non utilizzare la piattaforma.</p>
+    <p>Utilizzando <strong>Fanta FIFA Club World Cup</strong>, accetti i presenti Termini e Condizioni. Se non sei d’accordo, ti preghiamo di non utilizzare la piattaforma.</p>
   </div>
 
   <div class="section">
     <h2>2. Descrizione del Servizio</h2>
-    <p>FANTAFCWC è un fantasy game amatoriale ispirato al mondo dell’Eurovision Song Contest. Gli utenti possono creare una squadra di artisti e guadagnare punti in base ai voti reali ottenuti durante la competizione. Il tutto è svolto esclusivamente per finalità di intrattenimento, senza alcuno scopo di lucro.</p>
+    <p><strong>Fanta FIFA Club World Cup</strong> è un fantasy game amatoriale basato sul FIFA Club World Cup. Gli utenti creano la propria squadra di giocatori reali e accumulano punti in base alle prestazioni nelle partite. Il tutto è esclusivamente per divertimento e senza scopo di lucro.</p>
   </div>
 
   <div class="section">
     <h2>3. Registrazione e Account</h2>
-    <p>Per partecipare a FANTAFCWC, è necessario registrarsi e creare un account. Ogni utente è responsabile della sicurezza delle proprie credenziali e delle attività svolte tramite il proprio profilo.</p>
+    <p>Per accedere al gioco è necessario registrarsi e creare un account. Ogni utente è responsabile della sicurezza delle proprie credenziali e delle attività svolte tramite il proprio profilo.</p>
   </div>
 
   <div class="section">
     <h2>4. Condotta dell'Utente</h2>
-    <p>Utilizzando FANTAFCWC, ti impegni a:</p>
+    <p>Quando giochi, ti impegni a:</p>
     <ul>
-      <li>Non violare leggi o regolamenti vigenti</li>
-      <li>Non interferire con il corretto funzionamento della piattaforma</li>
-      <li>Non impersonare altre persone o artisti</li>
-      <li>Non usare la piattaforma per scopi illeciti o fraudolenti</li>
+      <li>Rispettare leggi e regolamenti vigenti</li>
+      <li>Non compromettere il funzionamento della piattaforma</li>
+      <li>Non impersonare terze persone</li>
+      <li>Non usare il servizio per scopi illeciti o fraudolenti</li>
     </ul>
   </div>
 
   <div class="section">
     <h2>5. Proprietà Intellettuale</h2>
-    <p>I contenuti originali presenti su FANTAFCWC (testi, grafiche, logiche di gioco) sono di proprietà della piattaforma o concessi in uso dai rispettivi titolari. I loghi e i materiali ufficiali dell’Eurovision Song Contest sono di proprietà dell’European Broadcasting Union (EBU) e vengono utilizzati a scopo descrittivo e nel rispetto del fair use, senza alcuna intenzione di violarne i diritti o di confondere l’utente.</p>
+    <p>Tutti i contenuti originali di <strong>Fanta FIFA Club World Cup</strong> (testi, stili, logiche di gioco) sono di nostra proprietà o concessi in uso. Qualsiasi logo, nome o marchio FIFA è di proprietà della FIFA stessa e viene utilizzato solo a scopo descrittivo, nel rispetto delle norme sul fair use, senza intenzione di confondere o violare diritti.</p>
   </div>
 
   <div class="section">
-    <h2>6. Gioco Gratuito e Finalità</h2>
-    <p>FANTAFCWC è totalmente gratuito e non prevede costi, premi in denaro o forme di scommessa. Ogni attività ha come unico scopo il divertimento e la partecipazione entusiasta alla gara canora più iconica d’Europa.</p>
+    <h2>6. Gioco Gratuito</h2>
+    <p>Il servizio è completamente gratuito. Non ci sono costi nascosti, premi in denaro né scommesse reali: solo puro divertimento da appassionati di calcio.</p>
   </div>
 
   <div class="section">
     <h2>7. Limitazione di Responsabilità</h2>
-    <p>FANTAFCWC non è responsabile per eventuali danni diretti o indiretti derivanti dall’uso della piattaforma, da malfunzionamenti tecnici o da errori nel calcolo dei punteggi.</p>
+    <p><strong>Fanta FIFA Club World Cup</strong> non è responsabile per danni diretti o indiretti derivanti da malfunzionamenti tecnici, errori di punteggio o uso improprio della piattaforma.</p>
   </div>
 
   <div class="section">
     <h2>8. Modifiche ai Termini</h2>
-    <p>Ci riserviamo il diritto di modificare in qualsiasi momento i presenti Termini e Condizioni. Le modifiche saranno pubblicate sul sito ufficiale e comunicate agli utenti registrati.</p>
+    <p>Ci riserviamo il diritto di aggiornare questi Termini e Condizioni in qualsiasi momento. Le modifiche saranno pubblicate qui e comunicate via email agli utenti registrati.</p>
   </div>
 
   <div class="section">
     <h2>9. Legge Applicabile</h2>
-    <p>Questi Termini e Condizioni sono regolati dalla legge italiana. Eventuali controversie saranno di competenza esclusiva dei tribunali italiani.</p>
+    <p>I presenti Termini sono regolati dalla legge italiana. Ogni controversia sarà di competenza esclusiva dei tribunali italiani.</p>
   </div>
 
   <div class="section">
     <h2>10. Contatti</h2>
-    <p>Per qualunque chiarimento o comunicazione, puoi scriverci all’indirizzo: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
+    <p>Per domande o richieste, scrivi a <a href="mailto:FANTAFWCWC@gmail.com">FANTAFWCWC@gmail.com</a>.</p>
   </div>
 
   <div class="section">
     <h2>11. Collaborazione e Trasparenza</h2>
-    <p>FANTAFCWC non è affiliato, sponsorizzato o riconosciuto ufficialmente dall’European Broadcasting Union (EBU) o da altri enti legati all’Eurovision Song Contest. Ogni riferimento al brand “Eurovision” è puramente descrittivo e celebrativo. Nessuna intenzione competitiva o commerciale è alla base del progetto.</p>
-    <p>Se l’organizzazione ufficiale desidera mettersi in contatto con noi per eventuali collaborazioni, siamo entusiasti all’idea: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
+    <p><strong>Fanta FIFA Club World Cup</strong> non è affiliato, sponsorizzato o riconosciuto ufficialmente da FIFA. Tuttavia, siamo sempre aperti al dialogo e lieti di esplorare possibili collaborazioni con FIFA per le prossime edizioni: lavorando fianco a fianco, potremo realizzare un’esperienza di gioco ancora più coinvolgente per tutti i fan del calcio.</p>
   </div>
 
   <div class="section">
-    <p><strong>FANTAFCWC – Tutti i diritti riservati</strong></p>
-    <p>Se vuoi creare il tuo fantasy personalizzato o hai un’idea da proporre, contattaci. Ci piace dare voce alla creatività (in ogni lingua). 🎤</p>
-    <p><em>Che vinca la musica, sempre.</em></p>
+    <p><strong>Fanta FIFA Club World Cup – Tutti i diritti riservati</strong></p>
+    <p><em>Il fantasy calcistico che unisce passione, strategia e amicizia.</em></p>
   </div>
 </body>
-
 </html>
