--- a/public/FanteexBackend.html
+++ b/public/FanteexBackend.html
@@ -261,7 +261,8 @@
         <div class="admin-card">
           <h3>Chiudi sfide scadute</h3>
           <p>Gestisci e chiudi automaticamente le sfide che hanno raggiunto la data di scadenza.</p>
-          <a href="gestione-sfide.html" class="btn btn-primary">Accedi</a>
+            <a href="gestione-sfide.html" class="btn btn-primary">H2H</a>
+            <a href="expired-leagues.html" class="btn btn-secondary">League</a>
         </div>
         
         <div class="admin-card">
