--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
- 
- 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
- <!-- SEO Base -->
- <meta name="description" content="FANTAFCWC è il fantasy game più musicale del web. Scegli i tuoi artisti preferiti, sfida altri fan e scala la classifica a suon di voti!">
- <meta name="keywords" content="fantasy game, Eurovision, artisti, musica, SWISSHEARTS, FANTAFCWC, sfide, voti, gioco gratuito, classifica">
- <meta name="author" content="FANTAFCWC Team">
- 
 
-<!-- Open Graph per condivisione social -->
-<meta property="og:title" content="FANTAFCWC - Il fantasy game dell'Eurovision 25">
-<meta property="og:description" content="Sfida altri fedeli, guadagna SWISSHEARTS e conquista il trono. Habemus Magnum Victorem!">
-<meta property="og:image" content="https://FANTAFCWC/icons/sh.png"> 
-<meta property="og:url" content="https://FANTAFCWC/">
-<meta property="og:type" content="website">
+  <!-- SEO Base -->
+  <meta name="description" content="Fanta FIFA Club World Cup: il fantasy game ufficiale del FIFA Club World Cup. Crea la tua rosa di campioni, usa i CLUBBY, sfida amici in Head 2 Head o Private League e scala la classifica mondiale!">
+  <meta name="keywords" content="fantasy calcio, FIFA Club World Cup, fantasy game, CLUBBY, FantaFCWC, Head 2 Head, Private League, gioco gratuito, classifica globale">
+  <meta name="author" content="FantaFCWC Team">
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="FANTAFCWC - Il fantasy game del conclave">
-<meta name="twitter:description" content="Sfida altri fedeli, crea la tua squadra di PLAYERS e vinci!">
-<meta name="twitter:image" content="https://FANTAFCWC/icons/sh.png">
+  <!-- Open Graph per condivisione social -->
+  <meta property="og:title" content="Fanta FIFA Club World Cup – Home">
+  <meta property="og:description" content="Metti insieme i campioni del FIFA Club World Cup, sfida gli amici e conquista il podio!">
+  <meta property="og:image" content="https://fantafcwc.com/images/og-image.png">
+  <meta property="og:url" content="https://fantafcwc.com/">
+  <meta property="og:type" content="website">
 
- 
-  <title>FANTAFCWC - Home</title>
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Fanta FIFA Club World Cup – Home">
+  <meta name="twitter:description" content="Il fantasy game del FIFA Club World Cup: costruisci la tua rosa, usa i CLUBBY, sfida tutti e vinci!">
+  <meta name="twitter:image" content="https://fantafcwc.com/images/twitter-card.png">
+
+  <title>Fanta FIFA Club World Cup - Home</title>
   <link rel="stylesheet" href="css/mobile.css">
   <link rel="stylesheet" href="css/mobile2.css">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat&display=swap" rel="stylesheet">
+
   <style>
     html, body {
       margin: 0;
@@ -73,17 +70,17 @@
       text-transform: uppercase;
     }
     iframe {
-  display: block;
-  max-width: 100%;
-  width: 100%;
-  aspect-ratio: 16 / 9;
-  border: none;
-  border-radius: 12px;
-  margin-bottom: 20px;
-  background-color: transparent;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  overflow: hidden;
-}
+      display: block;
+      max-width: 100%;
+      width: 100%;
+      aspect-ratio: 16 / 9;
+      border: none;
+      border-radius: 12px;
+      margin-bottom: 20px;
+      background-color: transparent;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+      overflow: hidden;
+    }
     .buttons {
       display: flex;
       flex-direction: column;
@@ -91,12 +88,11 @@
       margin: 0 auto 30px auto;
     }
     .btn {
-  font-family: 'Barlow Condensed', sans-serif;
-  font-weight: 700;
+      font-family: 'Barlow Condensed', sans-serif;
+      font-weight: 700;
       padding: 12px 20px;
       border-radius: 25px;
       font-size: 18px;
-      font-weight: bold;
       border: none;
       margin: 8px 0;
       cursor: pointer;
@@ -124,42 +120,35 @@
   </style>
 </head>
 <body>
-  <div class="logo-text">FANTA</div>
+  <div class="logo-text">FANTA FCWC</div>
   <div class="logo-image">
-    <img src="images/logo.png" alt="Logo FANTAFCWC" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
+    <img src="images/logo.png" alt="Logo Fanta FIFA Club World Cup" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
   </div>
 
   <div class="intro">
-    <p><strong>Il fantasy musicale più divertente del web!</strong> Scegli i tuoi artisti preferiti, sfida gli altri fan e colleziona SWISSHEARTS. La vetta della classifica ti aspetta... a suon di hit!</p>
+    <p><strong>Il fantasy calcistico dedicato al FIFA Club World Cup!</strong> Metti insieme la tua rosa di campioni, usa i CLUBBY per acquistarli e sfida gli amici in emozionanti sfide virtuali.</p>
   </div>
   
   <div class="how-to-play">
     <h2>Come si gioca</h2>
     <p>
-      <strong>Facile come un ritornello:</strong><br>
-      Registrazione: Parti con 500 SWISSHEARTS.<br>
-      Sfide: Usa fino a 10 SWISSHEARTS per creare la tua squadra di artisti.<br>
-      Montepremi: Chi totalizza più punti si prende tutto. Parità? Si divide la gloria!<br>
-      Punteggi: <BR>
-        SemiFinale: Se l'artista si qualifica 2.5 punti, se no zero<br>
-        Finale: Ogni artista ti dà punti in base ai voti ottenuti (voti divisi per 100 e normalizzati a step di 0.5).<br>
-      Esempio: 456 voti = 4.5 punti. 445 voti = 4.0 punti.<br>
-      Classifica: Più SWISSHEARTS guadagni, più sali in classifica. Chi ha ritmo… conquista il podio! 🎶<br><br>
-      Vuoi leggere il regolamento completo? <a href="rules.html">Vai al regolamento</a>.
+      <strong>È semplice:</strong><br>
+      Registrazione: Parti con 500 CLUBBY.<br>
+      Squadra: Acquista i giocatori che preferisci, spendendo fino a 10 CLUBBY in totale.<br>
+      Sfide: Scegli Head 2 Head (vincita totale) o crea la tua Private League (fino a 10 partecipanti).<br>
+      Punteggi: I punti si calcolano in base alle performance reali (gol, clean sheet, cartellini e altro).<br>
+      Classifica: Vinci CLUBBY e scala la classifica globale!<br><br>
+      Per tutti i dettagli, <a href="modals/rules.html">leggi il regolamento completo</a>.
     </p>
   </div>
-  
-  
-
-
 
   <div class="buttons">
     <button class="btn btn-yellow" onclick="window.location.href='register.html'">REGISTRATI</button>
-    <button class="btn btn-outline-yellow" onclick="window.location.href='/signin.html'">ACCEDI</button>
+    <button class="btn btn-outline-yellow" onclick="window.location.href='signin.html'">ACCEDI</button>
   </div>
 
   <div class="footer">
-    <p>© 2025 FANTAFCWC - Per info: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
+    <p>© 2025 Fanta FIFA Club World Cup - Per info: <a href="mailto:FANTAFCWC@gmail.com">FANTAFCWC@gmail.com</a></p>
   </div>
 </body>
 </html>
