--- a/public/signin.html
+++ b/public/signin.html
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-  <div class="logo-text">FANTA</div>
+  <div class="logo-text">FANTA FCWC</div>
   <div class="logo-image">
     <img src="images/logo.png" alt="Logo FANTAFCWC" style="display: block; max-width: 200px; margin: 0 auto 20px auto;">
   </div>
