--- a/public/select-opponent.html
+++ b/public/select-opponent.html
@@ -23,7 +23,7 @@
     <div class="user-profile">
       <img src="icons/freccia.png" alt="Indietro" id="backArrow" class="back-arrow">
       <div class="user-info">
-        <h1 class="user-name">SFIDA AMICO</h1>
+        <h1 class="user-name">HEAD2HEAD</h1>
       </div>
     </div>
     <div class="teex-balance">
