--- a/public/add-members.html
+++ b/public/add-members.html
@@ -49,7 +49,7 @@
       <div class="stats-row">
         <div class="label_m_small">PLAYERS</div>
         <div class="label_m_small">Cost</div>
-        <div class="label_m_small">PPC left</div>
+        <div class="label_m_small">Clubby left</div>
       </div>
       <div class="stats-values">
         <div class="square_cont_color scc_petrolio" id="playersCount">12</div>
