--- a/public/add-members.html
+++ b/public/add-members.html
@@ -69,14 +69,17 @@
 
 
   <!-- Sort header -->
-  <div class="sort-header">
-    <div class="sort-item active" data-sort="athlete_shortname">
-      Name
-      <div class="sort-triangle asc"></div>
-    </div>
-    <div class="sort-item" data-sort="player_team_code">TEAM</div>
-    <div class="sort-item right-align" data-sort="event_unit_cost">Cost</div>
-  </div>
+   <div class="sort-header">
+       <div class="sort-item" data-sort="athlete_shortname">
+         Name
+       </div>
+       <div class="sort-item" data-sort="player_team_code">
+         TEAM
+       </div>
+       <div class="sort-item right-align" data-sort="event_unit_cost">
+         Cost
+       </div>
+     </div>
 
   <ul id="playerList" class="player-list"></ul>
 
