--- a/public/contest-creation.html
+++ b/public/contest-creation.html
@@ -76,5 +76,16 @@
       </footer>
     </div>
   </div>
+
+    <!-- Modale “Saldo insufficiente” -->
+    <div id="insufficientBalanceModal" class="modal-insuf">
+      <div class="modal-insuf-content">
+        <span class="close">&times;</span>
+        <p id="insufficientBalanceMessage">Saldo insufficiente</p><BR>
+        <button id="insufficientBalanceClose" class="footer_button footer_button_orange">
+          OK
+        </button>
+      </div>
+    </div>
 </body>
 </html>
