--- a/public/select-opponent.html
+++ b/public/select-opponent.html
@@ -48,7 +48,7 @@
 
   <div class="sort-item active" data-sort="balance">
     <img src="icons/sh.png" alt="PPC" class="sort-ppc-icon">
-    SWISSHEARTS
+    CLUBBY
     <div class="sort-triangle desc"></div>
   </div>
 </div>
