--- a/public/add-members.html
+++ b/public/add-members.html
@@ -64,7 +64,7 @@
   <div class="search-container">
     <span class="search-icon">🔍</span>
     <input type="text" id="searchInput" class="search-box" placeholder="Search name or team…">
-    <span class="clear-search" id="clearSearch" style="display: none;">X</span>
+    <span class="clear-search" id="clearSearch" style="display: none;"></span>
   </div>
 
 
