--- a/public/expired-leagues.html
+++ b/public/expired-leagues.html
@@ -330,6 +330,7 @@
     <div class="tabs">
       <button class="tab active" data-status="1" id="pendingTab">Sfide Pending</button>
       <button class="tab" data-status="0" id="createdTab">Sfide Created</button>
+      <button class="tab" data-status="ready-live" id="readyLiveTab">Sfide Ready-Live</button>
     </div>
     
     <div class="controls">
@@ -343,7 +344,7 @@
       
       <div class="action-controls">
         <button class="btn btn-secondary" id="selectAllBtn">Seleziona Tutte</button>
-        <button class="btn btn-primary" id="deleteSelectedBtn">Cancella Selezionate</button>
+        <button class="btn btn-primary" id="forceCloseSelectedBtn">Chiudi Forzatamente Selezionate</button>
         <button class="btn btn-dark" id="exportCsvBtn">Esporta CSV</button>
       </div>
     </div>
